# swagger/v1/swagger.yaml
@@ -35,6 +35,25 @@ paths:
                   type: string
                 description:
                   type: string
+  "/api/v1/authors/{author_id}/courses/{course_id}":
+    parameters:
+    - name: author_id
+      in: path
+      description: author id
+      required: true
+      schema:
+        type: string
+    - name: course_id
+      in: path
+      description: course id
+      required: true
+      schema:
+        type: string
+    get:
+      summary: Получить расширенные данные курса автора
+      responses:
+        '200':
+          description: Успешно
   "/api/v1/authors/{author_id}/courses/{id}":
     parameters:
     - name: author_id
@@ -175,6 +194,59 @@ paths:
             ответа.
         '500':
           description: Не удалось найти замену автора.
+  "/api/v1/courses/{course_id}/skills":
+    parameters:
+    - name: course_id
+      in: path
+      description: ID of the course
+      required: true
+      schema:
+        type: string
+    post:
+      summary: Creates a skill for a course
+      tags:
+      - Skills
+      parameters: []
+      responses:
+        '201':
+          description: skill created
+        '422':
+          description: invalid request
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                name:
+                  type: string
+                description:
+                  type: string
+              required:
+              - name
+  "/api/v1/courses/{course_id}/skills/{skill_id}":
+    parameters:
+    - name: course_id
+      in: path
+      description: ID of the course
+      required: true
+      schema:
+        type: string
+    - name: skill_id
+      in: path
+      description: ID of the skill
+      required: true
+      schema:
+        type: string
+    delete:
+      summary: Deltes a skill for a course
+      tags:
+      - Skills
+      responses:
+        '204':
+          description: skill deleted
+        '404':
+          description: skill not found
 servers:
 - url: http://localhost:3000
   variables: {}
